--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "laravel-mix-esbuild",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Laravel Mix extension to replace babel loader with esbuild-loader.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shaffe-fr/laravel-mix-esbuild.git"
+    "url": "https://github.com/intelcoder/laravel-mix-esbuild.git"
   },
   "keywords": [
     "laravel mix",
@@ -13,18 +13,18 @@
     "esbuild",
     "esbuild-loader"
   ],
-  "author": "Karel Faille",
+  "author": "SJ",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shaffe-fr/laravel-mix-esbuild/issues"
+    "url": "https://github.com/intelcoder/laravel-mix-esbuild/issues"
   },
-  "homepage": "https://github.com/shaffe-fr/laravel-mix-esbuild",
+  "homepage": "https://github.com/intelcoder/laravel-mix-esbuild",
   "scripts": {
     "format": "prettier --write \"**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "esbuild-loader": "^2.14.0"
+    "esbuild-loader": "^2.21.0"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
